Lighthouse & Contrast issue fix

--- a/styles/place.css
+++ b/styles/place.css
@@ -29,8 +29,8 @@ body {
 
 
 header {
-    background: var(--primary-color);
-    color: white;
+    background: var(--accent-color);
+    color: var(--secondary-color);
     text-align: center;
     padding: 1.25rem;
 }
@@ -104,9 +104,9 @@ main {
 footer {
     margin-top: 2rem;
 
-    background: var(--primary-color);
+    background: var(--accent-color);
 
-    color: white;
+    color: var(--card-background);
 
     text-align: center;
 
@@ -119,7 +119,7 @@ footer p {
 }
 
 #lastModified {
-    color: #ffe600;
+    color: var(--secondary-color);
 }
 
 
